--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,10 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+#keil files
+.vscode/
+Output/
+Listings/
+*.uvopt
+*.uvgui.*
