--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,13 @@ bld/
 [Ll]og/
 [Ll]ogs/
 
+# Keil Build results
+*.uvopt
+*.uvgui.*
+[Ll]istings/*
+[Oo]bjects/*
+[Oo]utput/*
+
 # Visual Studio 2015/2017 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
