--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,21 @@
-name: .NET Build
+name: Build ProjectCDC
 
 on:
   push:
     branches: [ master ]
-  pull_request:
-    branches: [ master ]
 
 jobs:
   build:
-    strategy:
-      matrix:
-        configuration: [Debug, Release]
     runs-on: windows-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Setup
-        uses: actions/setup-dotnet@v1
+      - name: Setup MSBuild Path
+        uses: warrenbuckley/Setup-MSBuild@v1
       - name: Build
-        working-directory: ProjectCDC/MasterTool/
-        run: dotnet build --configuration $env:Configuration
-        env:
-          Configuration: ${{ matrix.configuration }}
+        run: msbuild ProjectCDC/MasterTool/UsbScreen.sln /p:Configuration=Release /p:DeployOnBuild=true /p:PublishProfile=FolderProfile
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v1.0.0
+        with:
+          name: MasterToolCDC
+          path: ProjectCDC/MasterTool/UsbScreen/bin/Release
