--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,9 @@ on:
   push:
     paths:
       - 'ProjectCDC/MasterTool/**'
+  pull_request:
+    paths:
+      - 'ProjectCDC/MasterTool/**'
 
 jobs:
   build:
