屏幕类的数据绑定处理

--- a/ProjectCDC/testing/UsbScreen/UsbScreen.csproj
+++ b/ProjectCDC/testing/UsbScreen/UsbScreen.csproj
@@ -74,13 +74,14 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Device\SerialScreen.cs" />
+    <Compile Include="Models\SerialScreen.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Setting.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
