简单摆了点东西

--- a/ProjectCDC/Client/UsbScreen/UsbScreen.csproj
+++ b/ProjectCDC/Client/UsbScreen/UsbScreen.csproj
@@ -74,6 +74,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Convert.cs" />
     <Compile Include="Models\SerialScreen.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
