--- a/ProjectCDC/Client/UsbScreen/packages.config
+++ b/ProjectCDC/Client/UsbScreen/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Costura.Fody" version="4.1.0" targetFramework="net45" />
   <package id="Fody" version="6.3.0" targetFramework="net45" developmentDependency="true" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net45" />
   <package id="PropertyChanged.Fody" version="3.2.10" targetFramework="net45" />
 </packages>
