标题栏跟随系统颜色

--- a/ProjectCDC/Client/UsbScreen/UsbScreen.csproj
+++ b/ProjectCDC/Client/UsbScreen/UsbScreen.csproj
@@ -89,6 +89,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Themes\TitleBarStyle.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\Setting.cs" />
