--- a/ProjectCDC/Client/plugins/AnalogDigitalClock/AnalogDigitalClock/AnalogDigitalClock.csproj
+++ b/ProjectCDC/Client/plugins/AnalogDigitalClock/AnalogDigitalClock/AnalogDigitalClock.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3EA7F2FD-BEF4-4FD6-BB56-C802D51756E0}</ProjectGuid>
+    <ProjectGuid>{F1A40407-0D4E-4EF3-8652-49091C534747}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AnalogClock</RootNamespace>
-    <AssemblyName>AnalogClock</AssemblyName>
+    <RootNamespace>AnalogDigitalClock</RootNamespace>
+    <AssemblyName>AnalogDigitalClock</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
