--- a/ProjectCDC/Client/plugins/ClockAnalogDigital0/ClockAnalogDigital0/ClockAnalogDigital0.csproj
+++ b/ProjectCDC/Client/plugins/ClockAnalogDigital0/ClockAnalogDigital0/ClockAnalogDigital0.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F1A40407-0D4E-4EF3-8652-49091C534747}</ProjectGuid>
+    <ProjectGuid>{42323271-2BD9-4B75-81DD-E4D005384F6F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AnalogDigitalClock</RootNamespace>
-    <AssemblyName>AnalogDigitalClock</AssemblyName>
+    <RootNamespace>ClockAnalogDigital0</RootNamespace>
+    <AssemblyName>ClockAnalogDigital0</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -42,8 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class.cs" />
-    <Compile Include="IScreen.cs" />
+    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
