--- a/ProjectCDC/Client/plugins/ClockMechanical0/ClockMechanical0/ClockMechanical0.csproj
+++ b/ProjectCDC/Client/plugins/ClockMechanical0/ClockMechanical0/ClockMechanical0.csproj
@@ -1,14 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3EA7F2FD-BEF4-4FD6-BB56-C802D51756E0}</ProjectGuid>
+    <ProjectGuid>e58fd023-8128-4d33-b91d-39cb518b9e6b</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AnalogClock</RootNamespace>
-    <AssemblyName>AnalogClock</AssemblyName>
+    <RootNamespace>ClockMechanical0</RootNamespace>
+    <AssemblyName>ClockMechanical0</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -31,31 +31,24 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
+    <Reference Include="System"/>
+    
+    <Reference Include="System.Core"/>
+    <Reference Include="System.Xml.Linq"/>
+    <Reference Include="System.Data.DataSetExtensions"/>
+    
+    
+    <Reference Include="Microsoft.CSharp"/>
+    
+    <Reference Include="System.Data"/>
+    
+    <Reference Include="System.Net.Http"/>
+    
+    <Reference Include="System.Xml"/>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class.cs" />
-    <Compile Include="IScreen.cs" />
+    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PostBuildEvent>set WORKDIR=$(SolutionDir)
-set PluginDIR=plugins\$(ProjectName)\$(TargetName)\$(OutDir)
-set PluginEXE=$(TargetFileName)
-set ClientDIR=UsbScreen\bin\Debug\plugin\
-cd %25WORKDIR%25
-cd ../../
-if exist UsbScreen\ (
-copy %25PluginDIR%25%25PluginEXE%25 %25ClientDIR%25
-)</PostBuildEvent>
-  </PropertyGroup>
-</Project>
+ </Project>
