--- a/ProjectCDC/Client/plugins/ClockAnalogDigital0/ClockAnalogDigital0/ClockAnalogDigital0.csproj
+++ b/ProjectCDC/Client/plugins/ClockAnalogDigital0/ClockAnalogDigital0/ClockAnalogDigital0.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Class.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
