--- a/ProjectCDC/Client/plugins/ClockTheme/ClockTheme/ClockTheme.csproj
+++ b/ProjectCDC/Client/plugins/ClockTheme/ClockTheme/ClockTheme.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5643768D-BFE2-408A-8E5A-41799F899E38}</ProjectGuid>
+    <ProjectGuid>{B4751C58-F16F-4851-B56E-D6CA66BAED27}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ClockAnalogTheme</RootNamespace>
-    <AssemblyName>ClockAnalogTheme</AssemblyName>
+    <RootNamespace>ClockTheme</RootNamespace>
+    <AssemblyName>ClockTheme</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -44,6 +44,9 @@
   <ItemGroup>
     <Compile Include="Class.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\ReadMe.md" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
